@@ -15,3 +15,5 @@
 /*.ihx
 /*.hex
 /pcode
+/tags
+
