@@ -204,6 +204,11 @@ mksymtab.c, cvsparser.c, and cvsparser.h
     cat ../syscall/syscall.csv ../lib/lib.csv | sort >tmp.csv
     ./mksymtab.exe tmp.csv tmp.c
 
+mkctags.sh
+----------
+
+  A script for creating ctags from Ken Pettit.  See http://ctags.sourceforge.net/
+
 pic32mx
 -------
 
